[package]
name = "steamclipexporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
sanitize-filename = "0.5.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1"
tempfile = "3.13.0"
